# BAI

./: .gitignore  Readme.md  pyproject.toml
lab1/: lab_1.html  lab_1.ipynb  lab_1.py
lab2/: feature_names.json  lab_2.py
lab3/: lab_3.html  lab_3.ipynb
lab4/: lab_4.html  lab_4.ipynb
lab5/: lab_5.html
lab6/: lab_6.html  lab_6.ipynb
lab7/: lab_7.html  lab_7.ipynb
