[tool.poetry]
name = "ai-course-agh"
version = "0.1.0"
description = "Exercises for AI course at AGH."
authors = ["Aleksander Smywinski-Pohl <apohllo@o2.pl>"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"

[tool.poetry.dependencies]
python = "^3.11.0"

imbalanced-learn = "^0.12.4"
jupyterlab = "^4.2.5"
jupyterlab-execute-time = "^3.2.0"
jupytext = "^1.16.4"
lightgbm = "^4.5.0"
matplotlib = "^3.9.2"
missingno = "^0.5.2"
numpy = "^1.26.4"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
missingno = "^0.5.2"
isort = "^5.13.2"
notebook = "^7.2.2"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter-server = "^2.14.2"
nbconvert = "^7.16.4"
imblearn = "^0.0"
optuna = "^4.1.0"
opencv-python = "^4.10.0.84"
torch = "2.5.1+cu118"
torchvision = "2.5.1+cu118"
torchaudio = "0.20.1+cu118"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
jupyterlab-code-formatter = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
